--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
     <footer class="footer">
         <p class="year">2025</p>
-        <a href="https://rs.school/js/"><img src="rs_school_js.svg" alt="Logo" class="footer-logo" width="120" height="120"></a>
+        <a href="https://rs.school/courses/javascript-ru"><img src="rs_school_js.svg" alt="Logo" class="footer-logo" width="120" height="120"></a>
        
 
     </footer>
